<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_constrainedHeight="true"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="enterAlways"
            android:background="@color/primary_dark"
            app:title="@string/app_name"
            android:fontFamily="@font/raleway_semibold"
            app:titleTextColor="@color/primary_text">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_dark"
            app:tabIndicator="@drawable/layout_border"
            app:tabTextColor="@color/primary_text"
            android:fontFamily="@font/raleway_semibold"
            android:layout_alignParentStart="true"
            app:tabIndicatorGravity="center"
            app:tabIndicatorColor="@color/primary_text"
            app:tabIndicatorHeight="30dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_title_s2s" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_title_tr" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_title_pnrs" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_title_avail" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
