<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flayout_tr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.tabs.TR">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">


                <AutoCompleteTextView
                    android:id="@+id/train_route_train_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshape"
                    android:drawableLeft="@drawable/ic_baseline_train_24"
                    android:fontFamily="@font/raleway_semibold"
                    android:hint="@string/hint_enter_train_no"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@null" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/train_route_train_run_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/buttonshape"
                    android:drawableLeft="@drawable/ic_baseline_date_range_24"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/rv_runs_on"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/inside_train"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/buttonshape"
                    android:drawableLeft="@drawable/vd_onboarding"
                    android:fontFamily="@font/raleway_semibold"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/onboard_train"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp"/>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/buttonsearchTR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/train_route_search_button"
                    android:textColor="@color/primary_text"
                    custom:pb_colorComplete="@color/green_complete"
                    custom:pb_colorError="@color/red_error"
                    custom:pb_colorNormal="@color/accent"
                    custom:pb_colorPressed="@color/blue_pressed"
                    custom:pb_colorProgress="@color/purple_progress"
                    custom:pb_textComplete="Success"
                    custom:pb_textError="Error"
                    custom:pb_textProgress="Loading"
                    tools:ignore="RtlHardcoded" />

            </TableRow>
        </TableLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollViewTR"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayoutTR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</FrameLayout>